ME_4600/MESDK/ME-4000/VC/DLLInit.h


typedef   int(__cdecl *PF_ME4000AOSINGLESIMULTANEOUS(unsigned int uiBoardNumber, unsigned int* puiChannelNumber, unsigned long ulCount, int iTriggerMode, int* piExtTriggerEnable, int* piExtTriggerEdge, unsigned long ulTimeOutSeconds, short* psValue);

typedef   int(__cdecl *PF_ME4000AOSTARTSYNCHRONOUS(unsigned int uiBoardNumber, unsigned int* puiChannelNumber, unsigned long ulCount, int iTriggerMode, int* piExtTriggerEnable, int* piExtTriggerEdge, unsigned long ulTimeOutSeconds);


int me4000GetBoardVersion(
    unsigned int uiBoardNumber,
    unsigned short* pusVersion);


int me4000GetSerialNumber(
    unsigned int uiBoardNumber,
    unsigned long* pulSerialNumber);


int me4000AISingle(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    int iRange,
    int iSDMode,
    int iTriggerMode,
    int iExtTriggerEdge,
    unsigned long ulTimeOutSeconds,
    short* psDigitalValue);


int me4000AIMakeChannelListEntry(
    unsigned int uiChannelNumber,
    int iRange,
    unsigned char* pucChanListEntry);


int me4000AIConfig(
    unsigned int uiBoardNumber,
    unsigned char* pucChanList,
    unsigned int uiChanListCount,
    int iSDMode,
    int iSimultaneous,
    unsigned long ulReserved,
    unsigned long ulChanTicks,
    unsigned long ulScanTicksLow,
    unsigned long ulScanTicksHigh,
    int iAcqMode,
    int iExtTriggerMode,
    int iExtTriggerEdge);


int me4000AIScan(
    unsigned int uiBoardNumber,
    unsigned int uiNumberOfChanLists,
    short* psBuffer,
    unsigned long ulBufferSizeValues,
    int iExecutionMode,
    ME4000_P_AI_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned int uiRefreshFrequency,
    ME4000_P_AI_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int me4000AIContinuous(
    unsigned int uiBoardNumber,
    ME4000_P_AI_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned int uiRefreshFrequency,
    unsigned long ulTimeOutSeconds);


int me4000AIStart(
    unsigned int uiBoardNumber);


int me4000AIGetNewValues(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToRead,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesRead,
    int* piLastError);


int me4000AIStop(
    unsigned int uiBoardNumber,
    int iReserved);


int me4000AIExtractValues(
    unsigned int uiChannelNumber,
    short* psAIBuffer,
    unsigned long ulAIDataCount,
    unsigned char* pucChanList,
    unsigned int uiChanListCount,
    short* psChanBuffer,
    unsigned long ulChanBufferSizeValues,
    unsigned long* pulChanDataCount);


int me4000AIDigitToVolt(
    short sDigit,
    int iRange,
    double* pdVolt);


int me4000AIReset(
    unsigned int uiBoardNumber);


int me4000AIGetStatus(
    unsigned int uiBoardNumber,
    int iWaitIdle,
    int* piStatus);


int me4000AOSingle(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    int iTriggerMode,
    int iReserved,
    unsigned long ulReserved,
    short sValue    );


int me4000AOSingleSimultaneous(
    unsigned int uiBoardNumber,
    unsigned int* puiChannelNumber,
    unsigned long ulCount,
    int iTriggerMode,
    int* piExtTriggerEnable,
    int* piExtTriggerEdge,
    unsigned long ulTimeOutSeconds,
    short* psValue);


int me4000AOUpdate(
    unsigned int uiBoardNumber);


int me4000AOConfig(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    unsigned long ulTicks,
    int iTriggerMode,
    int iExtTriggerEdge);


int me4000AOWraparound(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    unsigned long ulLoops,
    int iExecutionMode,
    ME4000_P_AO_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int me4000AOContinuous(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    ME4000_P_AO_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned long ulTimeOutSeconds,
    unsigned long* pulNumberOfValuesWritten);


int me4000AOStart(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber);

    
int me4000AOStartSynchronous(
    unsigned int uiBoardNumber, 
    unsigned int* puiChannelNumber, 
    unsigned long ulCount, 
    int iTriggerMode, 
    int* piExtTriggerEnable, 
    int* piExtTriggerEdge, 
    unsigned long ulTimeOutSeconds);


int me4000AOAppendNewValues(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToAppend,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesAppended);


int me4000AOStop(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    int iStopMode);


int me4000AOVoltToDigit(
    double dVolt,
    short* psDigit);


int me4000AOReset(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber);


int me4000AOWaveGen(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    int iShape,
    double dAmplitude,
    double dOffset,
    double dFrequency);


int me4000AOGetStatus(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    int iWaitIdle,
    int* piStatus);


int me4000DIOConfig(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    int iPortDirection);


int me4000DIOResetAll(
    unsigned int uiBoardNumber);


int me4000DIOGetBit(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    unsigned int uiBitNumber,
    int *piBitValue);


int me4000DIOGetByte(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    unsigned char *pucByteValue);


int me4000DIOSetBit(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    unsigned int uiBitNumber,
    int iBitValue);


int me4000DIOSetByte(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    unsigned char ucByteValue);


int me4000CntWrite(
    unsigned int uiBoardNumber,
    int iCounter,
    int iMode,
    unsigned short usValue);