ME_4600/MESDK/ME-4000/VBasic/ME4000.bas


'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                         Board Specific Routines                               |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                            General Routines                                   |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000GetBoardVersion Lib "me4000Ex.dll" Alias "_me4000VB_GetBoardVersion@8" (ByVal lBoardNumber As Long, ByRef piVersion As Integer) As Long

Declare Function me4000GetSerialNumber Lib "me4000Ex.dll" Alias "_me4000VB_GetSerialNumber@8" (ByVal lBoardNumber As Long, ByRef plSeriakNumber As Long) As Long

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                               AI Routines                                     |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000AISingle Lib "me4000Ex.dll" Alias "_me4000VB_AISingle@32" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long, ByVal lRange As Long, ByVal lSDMode As Long, ByVal iTriggerMode As Long, ByVal lExtTriggerEdge As Long, ByVal lTimeOutSeconds As Long, ByRef piDigitalValue As Integer) As Long

Declare Function me4000AIMakeChannelListEntry Lib "me4000Ex.dll" Alias "_me4000VB_AIMakeChannelListEntry@12" (ByVal lChannelNumber As Long, ByVal lRange As Long, ByRef pbChanListEntry As Byte) As Long

Declare Function me4000AIConfig Lib "me4000Ex.dll" Alias "_me4000VB_AIConfig@48" (ByVal lBoardNumber As Long, ByRef pbChanList As Byte, ByVal lChanListCount As Long, ByVal lSDMode As Long, ByVal lSimultaneous As Long, ByVal lReserved As Long, ByVal lChanTicks As Long, ByVal lScanTicksLow As Long, ByVal lScanTicksHigh As Long, ByVal lAcMode As Long, ByVal lExtTriggerMode As Long, ByVal lExtTriggerEdge As Long) As Long

Declare Function me4000AIScan Lib "me4000Ex.dll" Alias "_me4000VB_AIScan@44" (ByVal lBoardNumber As Long, ByVal lNumberOfChanLists As Long, ByRef piBuffer As Integer, ByVal lBufferSizeValues As Long, ByVal lExecutionMode As Long, ByVal pCallbackProc As Long, ByVal lCallbackContext As Long, ByVal lRefreshFrequency As Long, ByVal pTerminateProc As Long, ByVal lTerminateContext As Long, ByVal lTimeOutSeconds As Long) As Long

Declare Function me4000AIContinuous Lib "me4000Ex.dll" Alias "_me4000VB_AIContinuous@20" (ByVal lBoardNumber As Long, ByVal pCallbackProc As Long, ByVal lCallbackContext As Long, ByVal lRefreshFrequency As Long, lTimeOutSeconds As Long) As Long

Declare Function me4000AIStart Lib "me4000Ex.dll" Alias "_me4000VB_AIStart@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000AIGetNewValues Lib "me4000Ex.dll" Alias "_me4000VB_AIGetNewValues@24" (ByVal lBoardNumber As Long, ByRef piBuffer As Integer, ByVal lNumberOfValuesToRead As Long, ByVal lExecutionMode As Long, ByRef plNumberofValuesRead As Long, ByRef piLastError As Long) As Long

Declare Function me4000AIStop Lib "me4000Ex.dll" Alias "_me4000VB_AIStop@8" (ByVal lBoardNumber As Long, ByVal lReserved As Long) As Long

Declare Function me4000AIExtractValues Lib "me4000Ex.dll" Alias "_me4000VB_AIExtractValues@32" (ByVal lChannelNumber As Long, ByRef piAIBuffer As Integer, ByVal lAIDataCount As Long, ByRef pbChanList As Byte, ByVal lChanListCount As Long, ByRef piChanBuffer As Integer, ByVal lChanBufferSizeValues As Long, ByRef plChanDataCount As Long) As Long

Declare Function me4000AIDigitToVolt Lib "me4000Ex.dll" Alias "_me4000VB_AIDigitToVolt@12" (ByVal iDigit As Integer, ByVal lRange As Long, ByRef pdVolt As Double) As Long

Declare Function me4000AIReset Lib "me4000Ex.dll" Alias "_me4000VB_AIReset@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000AIGetStatus Lib "me4000Ex.dll" Alias "_me4000VB_AIGetStatus@12" (ByVal lBoardNumber As Long, ByVal lWaitIdle As Long, ByRef plStatus As Long) As Long

'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                               AO Routines                                     |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000AOSingle Lib "me4000Ex.dll" Alias "_me4000VB_AOSingle@24" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long, ByVal lTriggerMode As Long, ByVal lExtTriggerEdge As Long, ByVal lTimeOutSeconds As Long, ByVal iValue As Integer) As Long

Declare Function me4000AOSingleSimultaneous Lib "me4000Ex.dll" Alias "_me4000VB_AOSingleSimultaneous@32" (ByVal lBoardNumber As Long, ByRef plChannelNumber As Long, ByVal lCount As Long, ByVal lTriggerMode As Long, ByRef plExtTriggerEnable As Long, ByRef plExtTriggerEdge As Long, ByVal lTimeOutSeconds As Long, ByRef piValue As Integer) As Long

' ----------------------------------------------------------------------------
' ----------------------------------------------------------------------------
' NOTE:   The following function is obsolete and is retained only for
'         backward compatibility. It should no longer be used.
Declare Function me4000AOUpdate Lib "me4000Ex.dll" Alias "_me4000VB_AOUpdate@4" (ByVal lBoardNumvber As Long) As Long
' ----------------------------------------------------------------------------
' ----------------------------------------------------------------------------

Declare Function me4000AOConfig Lib "me4000Ex.dll" Alias "_me4000VB_AOConfig@20" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long, ByVal lTicks As Long, ByVal lTriggerMode As Long, ByVal lExtTriggerEdge As Long) As Long

Declare Function me4000AOWraparound Lib "me4000Ex.dll" Alias "_me4000VB_AOWraparound@36" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long, ByRef piDataBuffer As Integer, ByVal lDataCount As Long, ByVal lLoops As Long, ByVal lExecutionMode As Long, ByVal pTerminateProc As Long, ByVal lTerminateContext As Long, ByVal lTimeOutSeconds As Long) As Long

Declare Function me4000AOContinuous Lib "me4000Ex.dll" Alias "_me4000VB_AOContinuous@32" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long, ByRef piDataBuffer As Integer, ByVal lDataCount As Long, ByVal pCallbackProc As Long, ByVal lCallbackContext As Long, ByVal lTimeOutSeconds As Long, ByRef plNumberOfValuesWritten As Long) As Long

Declare Function me4000AOStart Lib "me4000Ex.dll" Alias "_me4000VB_AOStart@8" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long) As Long

Declare Function me4000AOStartSynchronous Lib "me4000Ex.dll" Alias "_me4000VB_AOStartSynchronous@28" (ByVal lBoardNumber As Long, ByRef plChannnelNumber As Long, ByVal lCount As Long, ByVal lTriggerMode As Long, ByRef plExtTriggerEnable As Long, ByRef plExtTriggerEdge As Long, ByVal lTimeOutSeconds As Long) As Long

Declare Function me4000AOAppendNewValues Lib "me4000Ex.dll" Alias "_me4000VB_AOAppendNewValues@24" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long, ByRef piDataBuffer As Integer, ByVal lNumberOfValuesToAppend As Long, ByVal lExecutionMode As Long, ByRef plNumberOfValuesAppended As Long) As Long

Declare Function me4000AOStop Lib "me4000Ex.dll" Alias "_me4000VB_AOStop@12" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long, ByVal lStopMode As Long) As Long

Declare Function me4000AOVoltToDigit Lib "me4000Ex.dll" Alias "_me4000VB_AOVoltToDigit@8" (ByVal dVolts As Double, ByRef piDigit As Integer) As Long

Declare Function me4000AOReset Lib "me4000Ex.dll" Alias "_me4000VB_AOReset@8" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long) As Long

Declare Function me4000AOWaveGen Lib "me4000Ex.dll" Alias "_me4000VB_AOWaveGen@24" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long, ByVal lShape As Long, ByVal dAmplitude As Double, ByVal dOffset As Double, ByVal dFrequency As Double) As Long

Declare Function me4000AOGetStatus Lib "me4000Ex.dll" Alias "_me4000VB_AOGetStatus@16" (ByVal lBoardNumber As Long, ByVal lChannelNumber As Long, ByVal lWaitIdle As Long, ByRef plStatus As Long) As Long

'*-----------------------------------------------------------------------------+
'------------------------------------------------------------------------------|
'                                                                              |
'                              DIO Routines                                    |
'                                                                              |
'------------------------------------------------------------------------------|
'-----------------------------------------------------------------------------*/

Declare Function me4000DIOConfig Lib "me4000Ex.dll" Alias "_me4000VB_DIOConfig@12" (ByVal lBoardNumber As Long, ByVal lPortNumber As Long, ByVal lPortDirection As Long) As Long

Declare Function me4000DIOResetAll Lib "me4000Ex.dll" Alias "_me4000VB_DIOResetAll@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000DIOGetBit Lib "me4000Ex.dll" Alias "_me4000VB_DIOGetBit@16" (ByVal lBoardNumber As Long, ByVal lPortNumber As Long, ByVal lBitNumber As Long, ByRef plBitValue As Long) As Long

Declare Function me4000DIOGetByte Lib "me4000Ex.dll" Alias "_me4000VB_DIOGetByte@12" (ByVal lBoardNumber As Long, ByVal lPortNumber As Long, ByRef pbByteValue As Byte) As Long

Declare Function me4000DIOSetBit Lib "me4000Ex.dll" Alias "_me4000VB_DIOSetBit@16" (ByVal lBoardNumber As Long, ByVal lPortNumber As Long, ByVal lBitNumber As Long, ByVal lBitValue As Long) As Long

Declare Function me4000DIOSetByte Lib "me4000Ex.dll" Alias "_me4000VB_DIOSetByte@12" (ByVal lBoardNumber As Long, ByVal lPortNumber As Long, ByVal bByteValue As Byte) As Long


'*------------------------------------------------------------------------------+
'-------------------------------------------------------------------------------|
'                                                                               |
'                            Counter Routines                                   |
'                                                                               |
'-------------------------------------------------------------------------------|
'------------------------------------------------------------------------------*/

Declare Function me4000CntWrite Lib "me4000Ex.dll" Alias "_me4000VB_CntWrite@16" (ByVal lBoardNumber As Long, ByVal lCounter As Long, ByVal lMode As Long, ByVal iValue As Long) As Long
